<resources>
	<string name="app_name">Finger Paint</string>
	<!--shape name -->
	<string name="shape_name_square">SQUARE</string>
	<string name="shape_name_circle">CIRCLE</string>
	<string name="shape_name_triangle">TRIANGLE</string>
	<string name="shape_name_star">STAR</string>
	<!--btn tips -->
	<string name="menu_reset">Reset</string>
	<string name="menu_save">Save</string>
	<string name="menu_exit">Exit</string>
	<!--text-->
	<string name="main_curr_selected">Current</string>
	<string name="main_tips_1">Please choose a shape first.</string>
	<string name="main_tips_2">Now please choose a color.</string>
	<!--storage-->
	<string name="main_storage_success">Storage bitmap success</string>
	<string name="main_storage_failed">Storage bitmap failed.Please something.</string>
</resources>
