<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_shape"
	android:layout_width="@dimen/main_palette_w"
	android:layout_height="wrap_content"
	android:layout_alignParentStart="true"
	android:orientation="horizontal">
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<org.wus32.assessment.fp.view.shape.Square
			style="@style/ShapeRect"
			android:tag="@string/shape_name_square"/>
		<org.wus32.assessment.fp.view.shape.Circle
			style="@style/ShapeRect"
			android:tag="@string/shape_name_circle"
			android:layout_marginBottom="@dimen/child_layout_margin"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<org.wus32.assessment.fp.view.shape.Triangle
			style="@style/ShapeRect"
			android:tag="@string/shape_name_triangle"/>
	</LinearLayout>
</LinearLayout>
